--- a/music.html
+++ b/music.html
@@ -12,7 +12,7 @@
 
 <body id="music">
     <header>
-        <h1><a href="home.html">All About Donivan</a> </h1>
+        <h1><a href="index.html">All About Donivan</a> </h1>
         <div class="image-gallery">
              <h1><img src="images/Logo/Logo1.png" alt="Logo" class="logo"> </h1>
         </div>
@@ -20,7 +20,7 @@
 
         <nav>
             <ul>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="self.html">Self</a></li>
                 <li><a href="shows.html">Shows</a></li>
                 <li><a href="food.html">Food</a></li>
