--- a/shows.html
+++ b/shows.html
@@ -11,7 +11,7 @@
 </head>
 <body id="shows">
     <header>
-        <h1><a href="home.html">All About Donivan</a> </h1>
+        <h1><a href="index.html">All About Donivan</a> </h1>
         <div class="image-gallery">
              <h1><img src="images/Logo/Logo1.png" alt="Logo" class="logo"> </h1>
         </div>
@@ -19,7 +19,7 @@
 
         <nav>
             <ul>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="self.html">Self</a></li>
                 <li><a href="shows.html">Shows</a></li>
                 <li><a href="food.html">Food</a></li>
